--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/express-rate-limit": "^6.0.0",
     "@types/express-validator": "^3.0.0",
     "@types/multer": "^1.4.8",
+    "esbuild": "^0.20.2",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.0",
     "express-validator": "^7.0.1",
