--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "foodcare_be",
+  "name": "be-ecommerce",
   "scripts": {
-    "start": "npx prisma db push --accept-data-loss && nodemon ./src/index.ts",
+    "start": "nodemon ./src/index.js",
     "test": "jest"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.18",
     "bun-types": "latest"
   },
@@ -13,18 +14,14 @@
   },
   "dependencies": {
     "@prisma/client": "5.4.1",
-    "@types/express-rate-limit": "^6.0.0",
-    "@types/express-validator": "^3.0.0",
-    "@types/multer": "^1.4.8",
-    "esbuild": "^0.20.2",
+    "bcrpyt": "^2.0.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.0",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
-    "prisma": "^5.4.1",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.2.2"
+    "prisma": "^5.11.0"
   }
 }
