--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "5.4.1",
     "bcrpyt": "^2.0.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.0",
     "express-validator": "^7.0.1",
